# burn-mapping

./: .flake8  .gitignore  .pre-commit-config.yaml  BurnCube.py  Burn_Mapping_BurnCube_example.ipynb  Burn_Mapping_BurnCube_example1.ipynb  Dockerfile  README.md  constraints.txt  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  stats.py
.github/workflows/: burn-cube-image.yml
BurnCube/: BurnCube.py  Burn_Mapping_BurnCube_example.ipynb  README.md  burn_mapping_tiles.py  jobs.pbs  jobs_multi.pbs  launch_jobs.py  mask_tree_fire.py  scheduler_multi.py  sites.txt  stats.py
BurnCube/landsat-c3-aws/: Burn_Cube_C3-v.1.8-validation-Kangaroo-Island-notebook.ipynb  Burn_Cube_C3-v.1.9-validation-sample-area-notebook.ipynb  Burn_Cube_C3_Validation.ipynb  Burn_Cube_C3_utils.py  Burn_Cube_C3_validation_utils.py
ardc_historic_burn/: DEA_Burn_Cube_animation.ipynb  DEA_Burn_Cube_method.ipynb  DEA_RF_method.ipynb  DEA_burnt_area_uncertainty_prototype.ipynb  ga_ls8c_nbart_bc_cyear_3_test.yaml  run_BAC.py
aws_notebooks/: Burn_Cube_S2_C3-v0.2.ipynb  Burn_Cube_S2_C3-v0.3.ipynb  utils.py
dea_burn_cube/: __init__.py  __main__.py  __version__.py  algo.py  bc_data_loading.py  bc_data_processing.py  bc_io.py  data_loading.py  helper.py  io.py  task.py  utils.py
handover/: Burn_Mapping_BurnCube_example.ipynb  README.md  jobs.pbs  validationtoolbox.py
nci_notebooks/: Burn_Mapping_BurnCube_example.ipynb  burn_mapping_tiles.py  burnmapping_test.py  scheduler.py  validationtoolbox.py
notebooks/: README.md
notebooks/Albert/: TreeMapping.py  (+2 more)
tests/: setup_test_datacube.sh
(+161 files in other folders)
